testdata/fixtures/audit/positive/exec_user_input_js_destructured.js
const { exec } = require("child_process");

function runCommand(cmd) {
  exec(cmd);
}
