testdata/fixtures/audit/negative/sql_concat_neg_unrelated_concat_js.js
function greet(name) {
  const greeting = "Hello " + name;
  console.log(greeting);
  return greeting;
}
